@@ -20,6 +20,10 @@
    - djm@cvs.openbsd.org 2003/06/04 12:18:49
      [scp.c]
      ansify; ok markus@
+   - djm@cvs.openbsd.org 2003/06/04 12:40:39
+     [scp.c]
+     kill ssh process upon receipt of signal, bz #241.
+     based on patch from esb AT hawaii.edu; ok markus@
  - (djm) Update to fix of bug #584: lock card before return. 
    From larsch@trustcenter.de
 
@@ -450,4 +454,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2778 2003/06/04 12:51:08 djm Exp $
+$Id: ChangeLog,v 1.2779 2003/06/04 12:51:24 djm Exp $
